--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -1,7 +1,7 @@
 .header-section{
     min-height: 100vh;
     background-color: $accent;
-    padding-top: 2%;
+    padding: 2% 0;
     font-size: .5rem;
 
     &__main-info-img{
