fixed warnings in HTML validator and did img optimization

--- a/src/assets/scss/media.scss
+++ b/src/assets/scss/media.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 576px) {
+    .mt-30{
+        margin-top: 10px;
+    }
+
     .features-section__card{
         font-size: 1em;
         margin-top: 10px;
